--- a/Player/src/main/resources/application.properties
+++ b/Player/src/main/resources/application.properties
@@ -14,9 +14,15 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 logging.level.org.springframework.security=DEBUG
+
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+
 
 
 
