made a python script to fix encoding, add status field to json files, research for new database actualized, fixed DTOs, added gk stats, more fixes to the backend

--- a/Player/src/main/resources/JsonData/package.json
+++ b/Player/src/main/resources/JsonData/package.json
@@ -20,5 +20,8 @@
   "bugs": {
     "url": "https://github.com/openfootball/football.json/issues"
   },
-  "homepage": "https://github.com/openfootball/football.json"
+  "homepage": "https://github.com/openfootball/football.json",
+  "dependencies": {
+    "football.json": "file:"
+  }
 }
