--- a/Player/src/main/resources/application.properties
+++ b/Player/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.datasource.username=root
 spring.datasource.password=27122000@ziko
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.jackson.default-property-inclusion=non_null
+
+
 
 # Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
